references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/MetadataUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:41983d2f727d92c35e1d68ae4c7aca4b3f7e0fbf0ea849de46e453beebf3d166
size 3581
